fixed some issues with the makeshift mobile layout

--- a/src/App.css
+++ b/src/App.css
@@ -175,7 +175,7 @@ h1 {
 .bg-wrapper {
   position: absolute;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   z-index: -300;
 }
 
@@ -196,6 +196,6 @@ h1 {
 
 @media (max-width: 728px) {
   .reel {
-    scale: 0.;
+    scale: 0.6;
   }
 }
